--- a/app/admin/view/admin/password.html
+++ b/app/admin/view/admin/password.html
@@ -76,18 +76,8 @@
     </div>
 </div>
 <script>
-
-    // 获取数据
-    var data = ajax_read('/admin/read');
-    console.log(data);
-
     // 表单赋值
-    $('#id').val(data.id);
-    $('#username').val(data.username);
-    $('#real_name').val(data.real_name);
-    $('#phone').val(data.phone);
-    $('#wechat').val(data.wechat);
-    $('input[name="status"][value="' + data.status + '"]').attr('checked', true);
+    $('#id').val(get_url_id());
     
     // layui
     layui.use(['form', 'layer'], function () {
