--- a/app/admin/view/admin/password.html
+++ b/app/admin/view/admin/password.html
@@ -10,57 +10,24 @@
     <div class="layui-row">
         <form class="layui-form">
             <div class="layui-form-item">
-                <label for="username" class="layui-form-label">
-                    <span class="x-red">*</span>登录名
+                <label for="L_password" class="layui-form-label">
+                    <span class="x-red">*</span>密码
                 </label>
                 <div class="layui-input-inline">
-                    <input type="text" id="username" name="username" required="" lay-verify="username"
+                    <input type="password" id="L_password" name="password" required="" lay-verify="password"
                         autocomplete="off" class="layui-input">
                 </div>
                 <div class="layui-form-mid layui-word-aux">
-                    <span class="x-red">*</span>将会成为管理员唯一的登入名
+                    6到50个字符
                 </div>
             </div>
             <div class="layui-form-item">
-                <label for="real_name" class="layui-form-label">
-                    真实姓名
+                <label for="L_password_confirm" class="layui-form-label">
+                    <span class="x-red">*</span>确认密码
                 </label>
                 <div class="layui-input-inline">
-                    <input type="text" id="real_name" name="real_name" autocomplete="off" class="layui-input">
-                </div>
-            </div>
-            <div class="layui-form-item">
-                <label for="phone" class="layui-form-label">
-                    手机
-                </label>
-                <div class="layui-input-inline">
-                    <input type="text" id="phone" name="phone" autocomplete="off" class="layui-input">
-                </div>
-                <div class="layui-form-mid layui-word-aux">
-                    联系手机
-                </div>
-            </div>
-            <div class="layui-form-item">
-                <label for="L_email" class="layui-form-label">
-                    微信
-                </label>
-                <div class="layui-input-inline">
-                    <input type="text" id="L_email" name="email" lay-verify="" autocomplete="off" class="layui-input">
-                </div>
-            </div>
-            <!-- <div class="layui-form-item">
-                <label class="layui-form-label"><span class="x-red">*</span>角色</label>
-                <div class="layui-input-block">
-                    <input type="checkbox" name="like1[write]" lay-skin="primary" title="超级管理员" checked="">
-                    <input type="checkbox" name="like1[read]" lay-skin="primary" title="编辑人员">
-                    <input type="checkbox" name="like1[write]" lay-skin="primary" title="宣传人员" checked="">
-                </div>
-            </div> -->
-            <div class="layui-form-item">
-                <label class="layui-form-label">登录状态</label>
-                <div class="layui-input-block">
-                    <input type="radio" id="status" name="status" value="1" title="开启">
-                    <input type="radio" id="status" name="status" value="0" title="关闭">
+                    <input type="password" id="L_password_confirm" name="password_confirm" required=""
+                        lay-verify="password_confirm" autocomplete="off" class="layui-input">
                 </div>
             </div>
             <div class="layui-form-item">
@@ -85,21 +52,19 @@
         $ = layui.jquery;
         var form = layui.form,
             layer = layui.layer;
-
+        
         // 自定义验证规则
         form.verify({
-            username: function (value) {
-                if (empty(value)) {
-                    return '登录名不能为空！';
-                }
-                if (value.length < 2 || value.length > 25) {
-                    return '登录名为2到25个字符！';
+            password: [/(.+){6,50}$/, '密码必须6到50位'],
+            password_confirm: function (value) {
+                if ($('#L_password').val() != $('#L_password_confirm').val()) {
+                    return '两次密码不一致';
                 }
             }
         });
 
         // 更新数据
-        layui_ajax_update(form, '/admin/update', layer);
+        layui_ajax_update(form, '/admin/password', layer, false);
 
     });
 </script>
