--- a/app/admin/view/public/base.html
+++ b/app/admin/view/public/base.html
@@ -15,6 +15,7 @@
     <script src="__COMMON__/js/jquery.min.js" charset="utf-8"></script>
     <script src="__COMMON__/js/jquery.cookie.js" charset="utf-8"></script>
     <script src="__COMMON__/js/common.js" charset="utf-8"></script>
+    <script src="__COMMON__/js/ajax.js" charset="utf-8"></script>
 </head>
 <script>
     // 验证登录
