--- a/app/admin/view/admin/index.html
+++ b/app/admin/view/admin/index.html
@@ -1,4 +1,4 @@
-{extend name="public/base" /}
+{extend name="public/base_layui" /}
 {block name="title"}管理员列表{/block}
 {block name="load"}
 <!-- css -->
@@ -7,66 +7,69 @@
 <!-- 主体内容 -->
 {block name="main"}
 <div class="layui-fluid">
-  <div class="layui-row layui-col-space15">
-    <div class="layui-col-md12">
-      <div class="layui-card">
-        <div class="layui-card-body ">
-          <form class="layui-form layui-col-space5">
-            <div class="layui-inline layui-show-xs-block">
-              <input class="layui-input" autocomplete="off" placeholder="开始日" name="start" id="start">
-            </div>
-            <div class="layui-inline layui-show-xs-block">
-              <input class="layui-input" autocomplete="off" placeholder="截止日" name="end" id="end">
-            </div>
-            <div class="layui-inline layui-show-xs-block">
-              <input type="text" name="name" placeholder="请输入用户名" autocomplete="off" class="layui-input">
-            </div>
-            <div class="layui-inline layui-show-xs-block">
-              <button class="layui-btn" lay-submit="" lay-filter="search">
-                <i class="layui-icon">&#xe615;</i></button>
-            </div>
-          </form>
-        </div>
-        <div class="layui-card-header">
-          <button class="layui-btn layui-btn-danger" onclick="delAll()"><i class="layui-icon"></i>批量删除</button>
-          <button class="layui-btn" onclick="xadmin.open('添加管理员', '/view/admin_save', 600, 500)"><i
-              class="layui-icon"></i>添加</button>
-        </div>
-        <div class="layui-card-body ">
-          <table class="layui-table" lay-data="{ url:'/admin/index',page:true,toolbar: '#toolbarDemo',id:'test' }"
-            lay-filter="test">
-            <thead>
-              <tr>
-                <th lay-data="{type:'checkbox'}">ID</th>
-                <th lay-data="{field:'id', width:50, sort: true}">ID</th>
-                <th lay-data="{field:'username', width:120, edit: 'text'}">用户名</th>
-                <th lay-data="{field:'real_name', width:120, edit: 'text'}">真实姓名</th>
-                <th lay-data="{field:'phone', edit: 'text', width: 150}">手机</th>
-                <th lay-data="{field:'wechat', edit: 'text', width: 150}">微信</th>
-                <th lay-data="{field:'login_number', width: 100}">登录次数</th>
-                <th lay-data="{field:'status', width: 100, templet: '#statusTpl'}">状态</th>
-                <th lay-data="{field:'last_login_ip', width: 200}">上次登录ip</th>
-                <th
-                  lay-data="{field:'last_login_time', width: 200, templet: function(d){ return d.last_login_time ? timestampToTime(d.last_login_time) : '--';}}">
-                  上次登录时间</th>
-                <th
-                  lay-data="{field:'create_time', minWidth: 80, templet: function(d){ return timestampToTime(d.create_time);}}">
-                  创建时间</th>
-                <th lay-data="{field:'create_time', minWidth: 150, fixed: 'right', templet: '#editTpl'}">操作</th>
-            </thead>
-          </table>
-        </div>
-      </div>
+  <div class="layui-form">
+    <div class="layui-input-inline">
+      <input class="layui-input" type="text" name="username" value="" placeholder="ID" id="idReload">
+    </div>
+    <div class="layui-input-inline  layui-col-space5">
+      <input class="layui-input" type="text" name="user_id" value="" placeholder="会员ID" id="uidReload">
+    </div>
+    <div class="layui-input-inline">
+      <input class="layui-input" type="text" name="order" value="" placeholder="快递单号" id="numberReload">
+    </div>
+    <div class="layui-input-inline">
+      <button class="layui-btn akali" data-type="reload">搜索<button>
     </div>
   </div>
+
+  <div class="layui-card-body layui-col-space5">
+    <div class="layui-input-inline">
+      <a class="{$status == '' ?  'layui-btn' : 'layui-btn layui-btn-primary'} layui-btn-sm"
+        href="{:url('').$kdidStr}">全部<a>
+    </div>
+    <div class="layui-input-inline">
+      <a class="{$status == 1 ?  'layui-btn' : 'layui-btn layui-btn-primary'} layui-btn-sm"
+        href="{:url('', ['status' => '1']).$kdidStr}">未导出<a>
+    </div>
+    <div class="layui-input-inline">
+      <a class="{$status == 2 ?  'layui-btn' : 'layui-btn layui-btn-primary'} layui-btn-sm"
+        href="{:url('', ['status' => '2']).$kdidStr}">已导出<a>
+    </div>
+    <div class="layui-input-inline">
+      <a class="{$status == 3 ?  'layui-btn' : 'layui-btn layui-btn-primary'} layui-btn-sm"
+        href="{:url('', ['status' => '3']).$kdidStr}">退单<a>
+    </div>
+  </div>
+
+  <form class="layui-form" action="{:url('export')}" method="post" name="number" lay-filter="bag">
+    <div class="layui-card-body layui-col-space5">
+      <div class="layui-input-inline">
+        <input type="checkbox" name="id" title="全选" lay-filter="bag" lay-skin="primary">
+      </div>
+      <div class="layui-input-inline">
+        <!-- <button class="layui-btn layui-btn-sm" onclick="excel()">导出订单<button> -->
+        <button type="subimt" class="layui-btn layui-btn-sm">导出订单<button>
+      </div>
+      <div class="layui-input-inline">
+        <button type="subimt" class="layui-btn layui-btn-sm" onclick="tuis()">批量退单<button>
+      </div>
+    </div>
+
+    <table id="layui_user" lay-filter="user"></table>
+  </form>
 </div>
-<script type="text/html" id="toolbarDemo">
-  <div class = "layui-btn-container" > 
-    <button class = "layui-btn layui-btn-sm" lay-event = "getCheckData" > 获取选中行数据 </button>
-    <button class="layui-btn layui-btn-sm" lay-event="getCheckLength">获取选中数目</button > 
-    <button class = "layui-btn layui-btn-sm" lay-event = "isAll" > 验证是否全选</button>
-  </div> 
+
+<!-- {js href="/static/admin/layuiadmin/layui/layui.js" /} -->
+
+<script type="text/html" id="editTpl">
+  {{# if(d.status == 1 || d.status == 0){ }}
+  <!-- <a class="layui-btn layui-btn-xs" lay-event="edit"><i class="layui-icon">&#xe642;</i>修改</a> -->
+  <a class="layui-btn layui-btn-xs layui-bg-blue" lay-event="tui"><i class="layui-icon">&#xe640;</i>退单</a>
+  {{# }else { }}
+  ——
+  {{# }}}
 </script>
+
 <script type="text/html" id="statusTpl">
   <a onclick="ajax_change_status(this)"
     data-id="{{ d.id }}"
@@ -77,98 +80,195 @@
     {{ d.status == 1 ? '开启' : '关闭' }}
   </a>
 </script>
-<script type="text/html" id="editTpl">
-  <a title="修改" onclick="xadmin.open('修改', '/view/admin_update/{{ d.id }}', 600, 400)" href="javascript:;">
-    <i class="layui-icon">&#xe642;</i>
-  </a>
-  <a title="修改密码"  onclick="xadmin.open('修改密码', '/view/admin_password/{{ d.id }}', 600, 300)" href="javascript:;">
-    <i class="layui-icon">&#xe683;</i>
-  </a>
-  <a title="删除" onclick="layui_form_delete(this, '/admin/delete', '{{ d.id }}')" href="javascript:;">
-    <i class="layui-icon">&#xe640;</i>
-  </a>
-</script>
-<script>
-  layui.use('laydate', function () {
-    var laydate = layui.laydate;
 
-    // 执行一个laydate实例
-    laydate.render({
-      elem: '#start' // 指定元素
+<script type="text/html" id="wechatTpl">
+  <p>{{ d.wechat }}</p>
+</script>
+
+<script type="text/html" id="loginNumberTpl">
+  <p>{{ d.login_number }}</p>
+</script>
+
+<script type="text/html" id="phoneTpl">
+  <p>{{ d.phone }}</p>
+</script>
+
+<script type="text/html" id="realNameTpl">
+  <p style="color:#009688">{{ d.real_name }}</p>
+</script>
+
+<script type="text/html" id="usernameTpl">
+  <a href="javascript:;" lay-event="username" style="color:#01AAED;">{{ d.username }}</a>
+</script>
+
+<script type="text/html" id="idTpl">
+  <input type="checkbox" name="ids[]" title="" value="{{ d.id }}" lay-filter="bags" lay-skin="primary"> {{ d.id }}
+</script>
+
+<script>
+  layui.use(['jquery', 'layer', 'table', 'flow', 'form'], function () {
+    var table = layui.table
+      , $ = layui.$
+      , layer = layui.layer
+      , flow = layui.flow
+      , form = layui.form
+
+
+    // 第一个实例
+    var ins1 = table.render({
+      elem: '#layui_user'
+      , url: "{:url('index_data', ['id' => $id, 'kd_id' => $kd_id, 'user_id' => $user_id, 'number' => $number, 'status' => 1])}" //数据接口
+      , page: true //开启分页
+      , id: 'user'
+      , limit: 20
+      , limits: [20, 100, 200, 500]
+      , size: 'sm'
+      , cols: [[ //表头
+        { field: 'id', title: 'ID', width: 100, sort: true, fixed: 'left', templet: '#idTpl' }
+        , { field: 'username', title: '管理员名称', width: 120, edit: 'text', templet: '#usernameTpl' }
+        , { field: 'real_name', title: '真实姓名', width: 120, templet: '#realNameTpl' }
+        , { field: 'phone', title: '手机', width: 150, templet: '#phoneTpl' }
+        , { field: 'wechat', title: '微信', width: 150, templet: '#wechatTpl' }
+        , { field: 'login_number', title: '登录次数', width: 150, templet: '#loginNumberTpl' }
+        , { field: 'status', title: '状态', width: 90, templet: '#statusTpl', fixed: 'right' }
+        , { field: 'edit', title: '操作', width: 160, templet: '#editTpl', fixed: 'right' }
+      ]]
     });
 
-    // 执行一个laydate实例
-    laydate.render({
-      elem: '#end' // 指定元素
+    // 复选框
+    form.on('checkbox(bag)', function (data) {
+      console.log(data.elem); //得到checkbox原始DOM对象
+      console.log(data.elem.checked); //开关是否开启，true或者false
+      console.log(data.value); //开关value值，也可以通过data.elem.value得到
+      console.log(data.othis); //得到美化后的DOM对象
+
+      var status = data.elem.checked;
+      $('input[name="ids[]"]').prop('checked', status);
+      form.render();
+
+    });
+
+    form.on('checkbox(bags)', function (data) {
+      console.log(data.elem); //得到checkbox原始DOM对象
+      console.log(data.elem.checked); //开关是否开启，true或者false
+      console.log(data.value); //开关value值，也可以通过data.elem.value得到
+      console.log(data.othis); //得到美化后的DOM对象
+
+      var length = $('input[name="ids[]"]').not("input:checked").length;
+      if (length < 1) {
+        $('input[name="id"]').prop('checked', true);
+      } else {
+        $('input[name="id"]').prop('checked', false);
+      }
+
+      form.render();
+    });
+
+    //监听排序事件 
+    table.on('sort(user)', function (obj) {
+      console.log(obj.field);
+      console.log(obj.type);
+      console.log(this);
+
+      table.reload('user', {
+        initSort: obj
+        , where: {
+          field: obj.field
+          , order: obj.type
+        }
+      });
+
+    });
+
+    var $ = layui.$, active = {
+      reload: function () {
+        var idReload = $('#idReload');
+        var uidReload = $('#uidReload');
+        var numberReload = $('#numberReload');
+
+        var id = $('#idReload').val();
+        var uid = $('#uidReload').val();
+        var number = $('#numberReload').val();
+        window.location.href = "{:url()}?id=" + id + '&user_id=' + uid + '&number=' + number;
+        /*			//执行重载
+              table.reload('user', {
+                where: {
+                  id:idReload.val(),
+                  user_id:uidReload.val(),
+                  number:numberReload.val(),
+                }
+              });
+        */
+      }
+    };
+
+    //点击事件
+    $('.akali').on('click', function () {
+      var type = $(this).data('type');
+      active[type] ? active[type].call(this) : '';
+    });
+
+
+    //监听工具条
+    table.on('tool(user)', function (obj) {
+      var data = obj.data; //获得当前行数据
+      var layEvent = obj.event; //获得 lay-event 对应的值（也可以是表头的 event 参数对应的值）
+
+      switch (obj.event) {
+        case 'edit':
+          layer.open({
+            type: 2,
+            title: '修改',
+            content: '{:url("edit")}?id=' + data.id,
+            shadeClose: true,
+            shade: [0.8, '#000000'],
+            area: ['800px', '600px'],
+          });
+          break;
+        case 'tui':
+          window.location.href = "{:url('tui')}?id=" + data.id + '&user_id=' + data.user_id + '&number=' + data.number;
+          break;
+        case 'username':
+          window.location.href = "{:url('user/index')}?id=" + data.user_id;
+          break;
+      };
+
+    });
+
+    $(document).keydown(function (event) {
+      if (event.keyCode == 13) {
+        $('.akali').triggerHandler('click');
+      }
     });
 
   });
-</script>
-<script>
-  layui.use(['form', 'table', 'layer'], function () {
-    $ = layui.jquery;
-    var form = layui.form,
-      table = layui.table,
-      layer = layui.layer;
 
-    // 监听单元格编辑
-    table.on('edit(test)',
-      function (obj) {
-        var value = obj.value // 得到修改后的值
-          , data = obj.data // 得到所在行所有键值
-          , field = obj.field; // 得到字段
-        // layer.msg('[ID: ' + data.id + '] ' + field + ' 字段更改为：' + value);
-        ajax_field_value(data.id, field, value, 'admin');
-      });
 
-    //头工具栏事件
-    table.on('toolbar(test)',
-      function (obj) {
-        var checkStatus = table.checkStatus(obj.config.id);
-        switch (obj.event) {
-          case 'getCheckData':
-            var data = checkStatus.data;
-            layer.alert(JSON.stringify(data));
-            break;
-          case 'getCheckLength':
-            var data = checkStatus.data;
-            layer.msg('选中了：' + data.length + ' 个');
-            break;
-          case 'isAll':
-            layer.msg(checkStatus.isAll ? '全选' : '未全选');
-            break;
-        };
-      });
+  // 导出文档
+  function excel() {
+    layui.use(['jquery', 'layer'], function () {
+      var $ = layui.$
+        , layer = layui.layer
 
-    //监听提交
-    // form.on('submit(search)', function (data) {
-    //   if (slider.isOk()) {
-    //     // 发异步，把数据提交给php
-    //     $.ajax({
-    //       type: "POST",
-    //       contentType: "application/x-www-form-urlencoded",
-    //       url: '/admin/login',
-    //       data: data.field,
-    //       success: function (res) {
-    //         console.log(res);
-    //         if (res.code === config('failed')) {
-    //           layer.msg(res.msg);
-    //         } else if (res.code === config('success')) {
-    //           layer.msg('登录成功！', { time: 500 }, function () {
-    //             $.cookie('admin_login_token', res.data.token, { expires: 100 * 365, path: '/' });
-    //             $(window).attr('location', '/view/index');
-    //           });
-    //         }
-    //       }
-    //     });
 
-    //   } else {
-    //     layer.msg("请先通过滑块验证");
-    //   }
-    //   return false;
-    // });
+      $('form[name="number"]').submit();
+    });
+  }
 
-  });
+
+  // 退单
+  function tuis() {
+    layui.use(['jquery', 'layer'], function () {
+      var $ = layui.$
+        , layer = layui.layer
+
+
+      $('form[name=number]').attr('action', '{:url("tuis")}');
+      $('form[name="number"]').submit();
+    });
+
+  }
+
 
 </script>
 {/block}
