--- a/app/admin/view/public/base.html
+++ b/app/admin/view/public/base.html
@@ -8,8 +8,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport"
         content="width=device-width,user-scalable=yes, minimum-scale=0.4, initial-scale=0.8,target-densitydpi=low-dpi" />
-    <link rel="stylesheet" href="__XADMIN__/css/font.css">
-    <link rel="stylesheet" href="__XADMIN__/css/xadmin.css">
+    <link href="__XADMIN__/css/font.css" rel="stylesheet">
+    <link href="__XADMIN__/css/xadmin.css" rel="stylesheet">
     <script src="__XADMIN__/lib/layui/layui.js" charset="utf-8"></script>
     <script src="__XADMIN__/js/xadmin.js" type="text/javascript"></script>
     <script src="__COMMON__/js/jquery.min.js" charset="utf-8"></script>
